--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,8 @@
 
   <title>Password checker</title>
 
-<link href="./static/style.css" rel="stylesheet"></head>
+<link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
+
 <body class="minimal">
 <div id="site-border-left"></div>
 <div id="site-border-right"></div>
@@ -34,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./home.html" title="">01 : Home</a></li>
-          <li><a href="./checker.html" title="">02 : strength tester</a></li>
+          <li><a href="./checker.html" title="">02 : password checker</a></li>
           <li><a href="./strength.html" title="">03 : strength tester</a></li>
         </ul>
 
@@ -51,8 +52,8 @@
             <div class="text-content">
               <h1>Hello,<br>
                 <span id="typed-strings">
-                  <span>This is a password cjecker</span>
-                  <span>checks if your password has been part of a data breach</span>
+                  <span>This is a password checker</span>
+                  <span>Checks if your password has been part of a data breach</span>
                   <span>And how strong it is</span>
                 </span>
                 <span id="typed"></span>
