strength checker finished

--- a/templates/strength.html
+++ b/templates/strength.html
@@ -55,15 +55,11 @@
 
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-               <form action="submit_form" method="post" class="reveal-content">
+               <form action="submit_form2" method="post" class="reveal-content">
                   <div class="row">
                     <div class="col-md-7">
 
-                      <p>This checker allows you to search across multiple data breaches to see if
-                        your password has been compromised. For security you password is not actually
-                      sent over the internet and only the first 5 characters of the hashed password are sent
-                      to the api and then your password's count for breaches is selected locally on
-                      the server.</p>
+                      <p>This checker checks if your password is strong ie. hot good of a password it is.</p>
 
                       <div class="form-group">
                         <input name="password" type="text" class="form-control" id="password" placeholder="Password">
