--- a/templates/result.html
+++ b/templates/result.html
@@ -36,8 +36,8 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./home.html" title="">01 : Home</a></li>
-          <li><a href="./checker.html" title="">02 : password checker</a></li>
-          <li><a href="./strength.html" title="">03 : strength tester</a></li>
+          <li><a href="./checker.html" title="">02 : Password checker</a></li>
+          <li><a href="./strength.html" title="">03 : Strength tester</a></li>
         </ul>
 
       </div>
