--- a/templates/results2.html
+++ b/templates/results2.html
@@ -6,17 +6,16 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
+  <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Password checker</title>
-
+  <title>Has your password been hacked?</title>
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
-
 <body class="minimal">
 <div id="site-border-left"></div>
 <div id="site-border-right"></div>
@@ -43,40 +42,55 @@
     </div>
   </nav>
 </header>
-<!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./static/assets/images/space.jpg')">
+
+<div class="section-container">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <div class="hero-full-wrapper">
-            <div class="text-content">
-              <h1>Hello,<br>
-                <span id="typed-strings">
-                  <span>This is a password checker</span>
-                  <span>Checks if your password has been part of a data breach</span>
-                  <span>And how strong it is</span>
-                </span>
-                <span id="typed"></span>
-              </h1>
-            </div>
+          <div class="section-container-spacer text-center">
+            <h1 class="h2">03 : password checker</h1>
           </div>
-        </div>
+          <ul>
+              <li>{{data}}</li>
+          </ul>
+
+
+       </div>
       </div>
     </div>
   </div>
 
+
+<footer class="footer-container text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <p>© KRISHNASAI |</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
-     type();
-     movingBackgroundImage();
+     navActivePage();
   });
 </script>
 
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID
 
-<script type="text/javascript" src="./static/main.70a66962.js"></script></body>
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+  ga('create', 'UA-XXXXX-X', 'auto');
+  ga('send', 'pageview');
+</script>
 
-</html>
-
+--> <script type="text/javascript" src="./static/main.70a66962.js"></script></body>
 
 
 
